Tweak contrast a bit

--- a/index.htm
+++ b/index.htm
@@ -32,14 +32,17 @@
 </div>
 
 <div class="content">
+    <div class="background">
     <h1>Tivia Open Space -tapahtuma</h1>
     <h1>21.3.2024 klo 9 - 17.</h1>
     <h3>Maksuton. Verkossa.</h3>
     <h4>Ohjelma osallistujien agendalla.<br>
-        Vastauksia juuri niihin ongelmiin ja kysymyksiin, jotka ovat ajankohtaisia.</h4>
+        Vastauksia juuri niihin ongelmiin ja kysymyksiin, jotka ovat ajankohtaisia.<br>
+    Yhteisöltä, yhteisölle.</h4>
     <div class="member">
         <a href="https://tivia.fi/liity-jaseneksi" target="_blank" class="btn">Tivian jäseneksi</a>
     </div>
+</div>
 </div>
 
 
