Tuning meta properties

--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap" rel="stylesheet">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta property="og:title" content="Tivia Open Space -tapahtuma">
-        <meta property="og:url" content="https://tivia.fi/tos/">
-    <meta property="og:description" name="description" content="Tivia Open Space -tapahtuma on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
+        <meta property="og:url" content="https://tiviary.github.io/tos/">
+    <meta property="og:description" name="description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
     <meta property="og:site_name" content="tivia.fi/tos/">
     <meta property="og:locale" content="fi_FI">
     <meta property="og:type" content="website">
