Change meta property for site name

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
         <meta property="og:title" content="Tivia Open Space -tapahtuma">
         <meta property="og:url" content="https://tiviary.github.io/tos/">
     <meta property="og:description" name="description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
-    <meta property="og:site_name" content="tivia.fi/tos/">
+    <meta property="og:site_name" content="https://tiviary.github.io/tos/">
     <meta property="og:locale" content="fi_FI">
     <meta property="og:type" content="website">
     <meta name="author" content="Maaret Pyhäjärvi">
