--- a/index.htm
+++ b/index.htm
@@ -9,11 +9,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta property="og:title" content="Tivia Open Space -tapahtuma">
         <meta property="og:url" content="https://tiviary.github.io/tos/">
-    <meta property="og:description" name="description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
-    <meta property="og:site_name" content="https://tiviary.github.io/tos/">
-    <meta property="og:locale" content="fi_FI">
-    <meta property="og:type" content="website">
-    <meta name="author" content="Maaret Pyhäjärvi">
+        <meta property="og:description" name="description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
+        <meta property="og:site_name" content="https://tiviary.github.io/tos/">
+        <meta property="og:locale" content="fi_FI">
+        <meta property="og:type" content="website">
+        <meta name="author" content="Maaret Pyhäjärvi">
+        <meta name="keywords" content="yhteisö, tapahtuma, open space">
 <!--   <link rel="shortcut icon" type="image/jpg" href="./images/favicon.jpg"/>-->
     </head>
 
@@ -34,11 +35,13 @@
 <div class="content">
     <div class="background">
     <h1>Tivia Open Space -tapahtuma</h1>
+    <div class="indent">
     <h1>21.3.2024 klo 9 - 17.</h1>
     <h3>Maksuton. Verkossa.</h3>
     <h4>Ohjelma osallistujien agendalla.<br>
         Vastauksia juuri niihin ongelmiin ja kysymyksiin, jotka ovat ajankohtaisia.<br>
     Yhteisöltä, yhteisölle.</h4>
+</div>
     <div class="member">
         <a href="https://tivia.fi/liity-jaseneksi" target="_blank" class="btn">Tivian jäseneksi</a>
     </div>
