--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,25 @@
         <meta property="og:type" content="website">
         <meta name="author" content="Maaret Pyhäjärvi">
         <meta name="keywords" content="yhteisö, tapahtuma, open space">
+        <!-- Open Graph meta data -->
+        <meta property="og:url" content="https://tiviary.github.io/tos/">
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Tivia Open Space">
+        <meta property="og:title" content="Tivia Open Space">
+        <meta property="og:description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
+        <meta property="og: image" content="https://tiviary.github.io/tos/site-image.png">
+<!-- Twitter Meta Tags --> 
+        <meta name="twitter:card" content="summary_large_image"> 
+        <meta property="twitter:domain" content="https://tiviary.github.io/tos/">
+        <meta property="twitter:url" content="https://tiviary.github.io/tos/>
+        <meta name="twitter:title" content="Tivia Open Space">
+        <meta name="twitter:description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
+        <meta name="twitter:image" content="https://tiviary.github.io/tos/site-image.png">
+        <meta data-rh="true"name="twitter:imageialt"content="Tivia Open Space banner">
+        <meta data-rh="true" name="twitter:image:width" content="1280">
+        <meta data-rh="true" name="twitter:image:height" content="720">
+        <meta name="twitterisite"content="@TIVIAry"> <meta name="twitter:creator" content="@TIVIAry">
+        <meta name="twitter:creator:id" content="TIVIAry">
 <!--   <link rel="shortcut icon" type="image/jpg" href="./images/favicon.jpg"/>-->
     </head>
 
