Add first participant preliminary topics

--- a/index.htm
+++ b/index.htm
@@ -116,7 +116,7 @@
     <p>Aiheet sitoumuksetta, agenda rakennetaan vasta ideatorilla ja omat toiveesi osallistua aiheeseen
         vaikuttavat agendan rakentamisvaiheessa.</p>
 
-    <p>Osallistujamäärä: <span>1</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
+    <p>Osallistujamäärä: <span>2</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
@@ -126,6 +126,9 @@
         <li>Kaksi vuotta copilot-käyttöä testaajan silmälasein, miksi ajattelu on yhä tärkeämpää? (Maaret Pyhäjärvi)</li>
         <li>Mikrorahoituskokemuksia Selenium Open Source -yhteisöstä (Maaret Pyhäjärvi)</li>
         <li>Avoimen lähdekoodin projekteihin kontribuointi (Maaret Pyhäjärvi)</li>
+        <li>Saavutettavuus ja sen testaus (anon - ei julkaisulupaa nimelle)</li> 
+        <li>Datan laatu testauksessa (anon - ei julkaisulupaa nimelle)</li>
+        <li>Tietoturvaa halvalla ja nopeasti (anon - ei julkaisulupaa nimelle)</li>
     </ul>
 
     <div class="background"><p>Haluatko mukaan järkkäämään ja oppimaan tapahtumatyypistä kulissien puolella: laita postia maaret@iki.fi</p></div>
