Add few preliminary topics

--- a/index.htm
+++ b/index.htm
@@ -121,14 +121,16 @@
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
         <li>Debuggauksen demokratisointi - miksi Observability muuttaa ohjelmistokehityksen maailmaa (Maaret Pyhäjärvi)</li>
-        <li>Onko pakko olla manageri jos ei halua? (Maaret Pyhäjärvi)</li>
-        <li>Ohjelmistotestaus on liian tärkeää jätettäväksi vain testaajille, mitä siitä pitäisi tietää? (Maaret Pyhäjärvi)</li>
+´       <li>Ohjelmistotestaus on liian tärkeää jätettäväksi vain testaajille, mitä siitä pitäisi tietää? (Maaret Pyhäjärvi)</li>
         <li>Kaksi vuotta copilot-käyttöä testaajan silmälasein, miksi ajattelu on yhä tärkeämpää? (Maaret Pyhäjärvi)</li>
         <li>Mikrorahoituskokemuksia Selenium Open Source -yhteisöstä (Maaret Pyhäjärvi)</li>
         <li>Avoimen lähdekoodin projekteihin kontribuointi (Maaret Pyhäjärvi)</li>
         <li>Saavutettavuus ja sen testaus (anon - ei julkaisulupaa nimelle)</li> 
         <li>Datan laatu testauksessa (anon - ei julkaisulupaa nimelle)</li>
         <li>Tietoturvaa halvalla ja nopeasti (anon - ei julkaisulupaa nimelle)</li>
+        <li>Pärjäisikö ilman anonyymiä palautetta? (Maaret Pyhäjärvi)</li>
+        <li>Asiantuntijan opas asiantuntija-aseman nostamiseen (Maaret Pyhäjärvi)</li>
+        <li>Ensimmäinen seuraaja - osaamisen demokratisointi johtajien korostuksen sijaan (Maaret Pyhäjärvi)</li>
     </ul>
 
     <div class="background"><p>Haluatko mukaan järkkäämään ja oppimaan tapahtumatyypistä kulissien puolella: laita postia maaret@iki.fi</p></div>
