--- a/index.htm
+++ b/index.htm
@@ -131,6 +131,7 @@
         <li>Pärjäisikö ilman anonyymiä palautetta? (Maaret Pyhäjärvi)</li>
         <li>Asiantuntijan opas asiantuntija-aseman nostamiseen (Maaret Pyhäjärvi)</li>
         <li>Ensimmäinen seuraaja - osaamisen demokratisointi johtajien korostuksen sijaan (Maaret Pyhäjärvi)</li>
+        <li>Nykyaikainen tutkiva testaus (Maaret Pyhäjärvi)</li>
     </ul>
 
     <div class="background"><p>Haluatko mukaan järkkäämään ja oppimaan tapahtumatyypistä kulissien puolella: laita postia maaret@iki.fi</p></div>
