Add more ideas of what we could do

--- a/index.htm
+++ b/index.htm
@@ -132,6 +132,7 @@
         <li>Asiantuntijan opas asiantuntija-aseman nostamiseen (Maaret Pyhäjärvi)</li>
         <li>Ensimmäinen seuraaja - osaamisen demokratisointi johtajien korostuksen sijaan (Maaret Pyhäjärvi)</li>
         <li>Nykyaikainen tutkiva testaus (Maaret Pyhäjärvi)</li>
+        <li>Hallusinointitestaus - yhteistestaussessiona (Maaret Pyhäjärvi)</li>
     </ul>
 
     <div class="background"><p>Haluatko mukaan järkkäämään ja oppimaan tapahtumatyypistä kulissien puolella: laita postia maaret@iki.fi</p></div>
