--- a/index.htm
+++ b/index.htm
@@ -133,6 +133,7 @@
         <li>Ensimmäinen seuraaja - osaamisen demokratisointi johtajien korostuksen sijaan (Maaret Pyhäjärvi)</li>
         <li>Nykyaikainen tutkiva testaus (Maaret Pyhäjärvi)</li>
         <li>Hallusinointitestaus - yhteistestaussessiona (Maaret Pyhäjärvi)</li>
+        <li>Mallipohjainen testaus - testitapausten kirjoittamisen ajan loppu (Maaret Pyhäjärvi)</li>
     </ul>
 
     <div class="background"><p>Haluatko mukaan järkkäämään ja oppimaan tapahtumatyypistä kulissien puolella: laita postia maaret@iki.fi</p></div>
