Delete extra char

--- a/index.htm
+++ b/index.htm
@@ -121,7 +121,7 @@
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
         <li>Debuggauksen demokratisointi - miksi Observability muuttaa ohjelmistokehityksen maailmaa (Maaret Pyhäjärvi)</li>
-´       <li>Ohjelmistotestaus on liian tärkeää jätettäväksi vain testaajille, mitä siitä pitäisi tietää? (Maaret Pyhäjärvi)</li>
+       <li>Ohjelmistotestaus on liian tärkeää jätettäväksi vain testaajille, mitä siitä pitäisi tietää? (Maaret Pyhäjärvi)</li>
         <li>Kaksi vuotta copilot-käyttöä testaajan silmälasein, miksi ajattelu on yhä tärkeämpää? (Maaret Pyhäjärvi)</li>
         <li>Mikrorahoituskokemuksia Selenium Open Source -yhteisöstä (Maaret Pyhäjärvi)</li>
         <li>Avoimen lähdekoodin projekteihin kontribuointi (Maaret Pyhäjärvi)</li>
