Update TIVIA ry as name

--- a/index.htm
+++ b/index.htm
@@ -81,7 +81,7 @@
         jotka haluavat jakaa osaamistaan ja oppia uutta.
         Tapahtuma on avoin kaikille tieto- ja viestintätekniikan ammattilaisille,
         ja voit tukea tätä ja muita tapahtumiamme liittymällä Tivia ry:n jäsenyhdistyksien jäseneksi.
-        Tapahtuman järjestää Tieto- ja viestintätekniikan ammattilaiset Tivia ry.</p>
+        Tapahtuman järjestää TIVIA ry.</p>
 
         <p>Tapahtuma-alustana käytämme Welo-sovellusta ja päivän agendan yhteisessä rakentamisessa Miro-sovellusta.
             Ilmoittauduttuasi saat kalenterikutsun tapahtumasta, jossa linkki Weloon.</p>
@@ -143,7 +143,7 @@
 <section class="footer">
     <div class="main">
         <p>
-(c) Tivia ry / Maaret Pyhäjärvi 2023</p>
+(c) TIVIA ry / Maaret Pyhäjärvi 2023</p>
 </div>
 </section>
 
