--- a/index.htm
+++ b/index.htm
@@ -134,6 +134,7 @@
         <li>Nykyaikainen tutkiva testaus (Maaret Pyhäjärvi)</li>
         <li>Hallusinointitestaus - yhteistestaussessiona (Maaret Pyhäjärvi)</li>
         <li>Mallipohjainen testaus - testitapausten kirjoittamisen ajan loppu (Maaret Pyhäjärvi)</li>
+        <li>Ulkoistaminen Suomen ulkopuolelle - yhteismallinnus haasteista (Maaret Pyhäjärvi)</li>
     </ul>
 
     <div class="background"><p>Haluatko mukaan järkkäämään ja oppimaan tapahtumatyypistä kulissien puolella: laita postia maaret@iki.fi</p></div>
