Update event page with enrollments

--- a/index.htm
+++ b/index.htm
@@ -116,12 +116,17 @@
     <p>Aiheet sitoumuksetta, agenda rakennetaan vasta ideatorilla ja omat toiveesi osallistua aiheeseen
         vaikuttavat agendan rakentamisvaiheessa.</p>
 
-    <p>Osallistujamäärä: <span>3</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
+    <p>Osallistujamäärä: <span>10</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
+        <li>Tiedon visualisoinnin merkitys tiedollajohtamisessa (HeidiL)</li>
+        <li>Tekoäly vuonna 2024 - Pelkoja ja odotuksia (Olli-Pekka Palonen)</li>
+        <li>NIS2 ja/tai Cyber-vakuutuksen vaatimukset (Juha Lilja)</li>
+        <li>Tietosuojan abc tietoalan henkilöstölle (Arvind Sedha)</li>
+        <li>Kaikkea tietoturvaan liittyviä aiheita</li>
         <li>Debuggauksen demokratisointi - miksi Observability muuttaa ohjelmistokehityksen maailmaa (Maaret Pyhäjärvi)</li>
-       <li>Ohjelmistotestaus on liian tärkeää jätettäväksi vain testaajille, mitä siitä pitäisi tietää? (Maaret Pyhäjärvi)</li>
+        <li>Ohjelmistotestaus on liian tärkeää jätettäväksi vain testaajille, mitä siitä pitäisi tietää? (Maaret Pyhäjärvi)</li>
         <li>Kaksi vuotta copilot-käyttöä testaajan silmälasein, miksi ajattelu on yhä tärkeämpää? (Maaret Pyhäjärvi)</li>
         <li>Mikrorahoituskokemuksia Selenium Open Source -yhteisöstä (Maaret Pyhäjärvi)</li>
         <li>Avoimen lähdekoodin projekteihin kontribuointi (Maaret Pyhäjärvi)</li>
