Update anon to one topic

--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
         <li>Tekoäly vuonna 2024 - Pelkoja ja odotuksia (Olli-Pekka Palonen)</li>
         <li>NIS2 ja/tai Cyber-vakuutuksen vaatimukset (Juha Lilja)</li>
         <li>Tietosuojan abc tietoalan henkilöstölle (Arvind Sedha)</li>
-        <li>Kaikkea tietoturvaan liittyviä aiheita</li>
+        <li>Kaikkea tietoturvaan liittyviä aiheita (anon - ei julkaisulupaa nimelle)</li>
         <li>Debuggauksen demokratisointi - miksi Observability muuttaa ohjelmistokehityksen maailmaa (Maaret Pyhäjärvi)</li>
         <li>Ohjelmistotestaus on liian tärkeää jätettäväksi vain testaajille, mitä siitä pitäisi tietää? (Maaret Pyhäjärvi)</li>
         <li>Kaksi vuotta copilot-käyttöä testaajan silmälasein, miksi ajattelu on yhä tärkeämpää? (Maaret Pyhäjärvi)</li>
