Update copyright year

--- a/index.htm
+++ b/index.htm
@@ -149,7 +149,7 @@
 <section class="footer">
     <div class="main">
         <p>
-(c) TIVIA ry / Maaret Pyhäjärvi 2023</p>
+(c) TIVIA ry / Maaret Pyhäjärvi 2023 - 2024.</p>
 </div>
 </section>
 
