Updating participants number

--- a/index.htm
+++ b/index.htm
@@ -116,10 +116,11 @@
     <p>Aiheet sitoumuksetta, agenda rakennetaan vasta ideatorilla ja omat toiveesi osallistua aiheeseen
         vaikuttavat agendan rakentamisvaiheessa.</p>
 
-    <p>Osallistujamäärä: <span>12</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
+    <p>Osallistujamäärä: <span>14</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
+        <li>Mistä tunnistaa tekoälytietäjän? (Maaret Pyhäjärvi)</li>
         <li>Tiedon visualisoinnin merkitys tiedollajohtamisessa (HeidiL)</li>
         <li>Tekoäly vuonna 2024 - Pelkoja ja odotuksia (Olli-Pekka Palonen)</li>
         <li>NIS2 ja/tai Cyber-vakuutuksen vaatimukset (Juha Lilja)</li>
