--- a/index.htm
+++ b/index.htm
@@ -86,6 +86,9 @@
         <p>Tapahtuma-alustana käytämme Welo-sovellusta ja päivän agendan yhteisessä rakentamisessa Miro-sovellusta.
             Ilmoittauduttuasi saat kalenterikutsun tapahtumasta, jossa linkki Weloon.</p>
 
+            <img src="Welo-pic.jpeg">
+
+
         <p>Tapahtuma on tällä kertaa suomenkielinen.</p>
 
     <h3>Missä ja milloin?</h3>
@@ -105,6 +108,7 @@
         sessiota omaa panostustamme seuraten.  Meitä ohjaa myös neljä periaatetta: 1) oikeat ihmiset ovat paikalla 2) mitä tapahtuu kuuluu tapahtua 
         3) kun se alkaa, se on oikea hetki 4) Kun se on ohi, se on ohi.</p>
     </div>
+
 </section>
 
 <section class="topics">
