Added notes from sessions on 1st edition

--- a/index.htm
+++ b/index.htm
@@ -83,7 +83,7 @@
         ja voit tukea tätä ja muita tapahtumiamme liittymällä Tivia ry:n jäsenyhdistyksien jäseneksi.
         Tapahtuman järjestää TIVIA ry.</p>
 
-        <p>Tapahtuma-alustana käytämme Welo-sovellusta ja päivän agendan yhteisessä rakentamisessa Miro-sovellusta.
+        <p>Tapahtuma-alustana käytämme Welo-sovellusta ja päivän agendan yhteisessä rakentamisessa <a href="https://miro.com/app/board/uXjVKeHJn98=/?share_link_id=779481513748">Miro-sovellusta</a>.
             Ilmoittauduttuasi saat kalenterikutsun tapahtumasta, jossa linkki Weloon.</p>
 
             <img src="Welo-pic.jpeg">
@@ -92,9 +92,9 @@
         <p>Tapahtuma on tällä kertaa suomenkielinen.</p>
 
     <h3>Missä ja milloin?</h3>
-    <p>Verkossa, (Welo). 21.3.2024 klo 9-17.</p>
+    <p>Verkossa, (Welo). 21.3.2024 klo 9-16.</p>
     <br>
-    <a href="https://forms.gle/twRzP8NKpBpGdUVV9" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a>
+<!-- <a href="https://forms.gle/twRzP8NKpBpGdUVV9" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a> -->
     <br><br>
 
     <h3>Open Space?</h3>
@@ -147,8 +147,44 @@
         <li>Ulkoistaminen Suomen ulkopuolelle - yhteismallinnus haasteista (Maaret Pyhäjärvi)</li>
     </ul>
 
-    <div class="background"><p>Haluatko mukaan järkkäämään ja oppimaan tapahtumatyypistä kulissien puolella: laita postia maaret@iki.fi</p></div>
 </div>
+</section>
+
+<section class="about">
+    <div class="main">
+    <h3>Käsitellyt aiheet</h2>
+        <p>
+        Open Space -tapahtuman ohjelma muotoutuu viime kädessä osallistujien agendalla. Tänään osallistujat valitsivat 
+        oppia ja keskustella kuuden aiheen tiimoilla.</p>
+    <ul>
+        <li>Tekoälyn ajokortti<br>
+            <img width="60%" src="sessio1.png">
+        </li>
+        <li>Avoimen lähdekoodin yhteisöihin kontribuointi<br>
+            <img width="60%" src="sessio2.png">
+        </li>
+        <li>Python-ohjelmointi Copilotilla<br>
+            <img width="60%"src="sessio3.png">
+        </li>
+        <li>Saavutettavuus<br>
+            <img width="60%"src="sessio4.png">
+        </li>
+        <li>Mistä tunnistaa tekoälytietäjän?<br>
+            <img width="60%"src="sessio5.png">
+        </li>
+        <li>IT-kummitoiminta<br>
+            <img width="60%"src="sessio6.png">
+        </li>
+        </ul>
+    </div>
+
+</section>
+
+<section class="topics">
+    <div class="topics-main">
+
+    <div class="background"><p>Haluatko mukaan järkkäämään ja oppimaan tapahtumatyypistä kulissien puolella: laita postia maaret@iki.fi</p></div>
+    </div>
 </section>
 
 <section class="footer">
