Add menu to past topics

--- a/index.htm
+++ b/index.htm
@@ -48,6 +48,7 @@
         <ul>
             <li><a href="#info">Tietoja tapahtumasta</a></li>
             <li><a href="#aiheet">Alustavat aiheet</a></li>
+            <li><a href="#toteutunut"> Käsitellyt aiheet</a></li>
         </ul>
     </div>
         <a href="https://forms.gle/twRzP8NKpBpGdUVV9" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a>
@@ -152,7 +153,7 @@
 
 <section class="about">
     <div class="main">
-    <h3>Käsitellyt aiheet</h2>
+    <h3 id="toteutunut">Käsitellyt aiheet</h2>
         <p>
         Open Space -tapahtuman ohjelma muotoutuu viime kädessä osallistujien agendalla. Tänään osallistujat valitsivat 
         oppia ja keskustella kuuden aiheen tiimoilla.</p>
