Tapahtumasivujen päivitys syksyn tapahtumaan

--- a/24-kevat/index.htm
+++ b/24-kevat/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tivia Open Space 29.8.2024</title>
+        <title>Tivia Open Space 21.3.2024</title>
         <link rel="stylesheet" type="text/css" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,7 +9,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta property="og:title" content="Tivia Open Space -tapahtuma">
         <meta property="og:url" content="https://tiviary.github.io/tos/">
-        <meta property="og:description" name="description" content="Tivia Open Space -tapahtuma 29.8.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
+        <meta property="og:description" name="description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
         <meta property="og:site_name" content="https://tiviary.github.io/tos/">
         <meta property="og:locale" content="fi_FI">
         <meta property="og:type" content="website">
@@ -19,13 +19,13 @@
 
         <!-- HTML Meta Tags -->
         <title>Tivia Open Space -tapahtuma</title>
-        <meta name="description" content="Tivia Open Space -tapahtuma 29.8.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
+        <meta name="description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
 
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="https://tiviary.github.io/tos/">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Tivia Open Space -tapahtuma">
-        <meta property="og:description" content="Tivia Open Space -tapahtuma 29.8.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
+        <meta property="og:description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
         <meta property="og:image" content="https://tiviary.github.io/tos/site-image.png">
 
         <!-- Twitter Meta Tags -->
@@ -33,7 +33,7 @@
         <meta property="twitter:domain" content="tiviary.github.io">
         <meta property="twitter:url" content="https://tiviary.github.io/tos/">
         <meta name="twitter:title" content="Tivia Open Space -tapahtuma">
-        <meta name="twitter:description" content="Tivia Open Space -tapahtuma 29.8.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
+        <meta name="twitter:description" content="Tivia Open Space -tapahtuma 21.3.2024 on tieto- ja viestintätekniikan ammattilaisten kohtauspaikka.">
         <meta name="twitter:image" content="https://tiviary.github.io/tos/site-image.png">
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
@@ -52,8 +52,6 @@
             <li><a href="/24-kevat/index.html">24-kevät</a></li>
         </ul>
     </div>
-        <!--lisää ilmoittautumislinkki,kerätään tällä kertaa tivian alustalla-->
-        <a href="" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a>
     </nav>
 </div>
 
@@ -61,7 +59,7 @@
     <div class="background">
     <h1>Tivia Open Space -tapahtuma</h1>
     <div class="indent">
-    <h1>29.8.2024 klo 9 - 17.</h1>
+    <h1>21.3.2024 klo 9 - 17.</h1>
     <h3>Maksuton. Verkossa.</h3>
     <h4>Ohjelma osallistujien agendalla.<br>
         Vastauksia juuri niihin ongelmiin ja kysymyksiin, jotka ovat ajankohtaisia.<br>
@@ -95,10 +93,9 @@
         <p>Tapahtuma on tällä kertaa suomenkielinen.</p>
 
     <h3>Missä ja milloin?</h3>
-    <p>Verkossa, (Welo). 29.8.2024 klo 9-16.</p>
+    <p>Verkossa, (Welo). 21.3.2024 klo 9-16.</p>
     <br>
-    <!--lisää ilmoittautumislinkki,kerätään tällä kertaa tivian alustalla-->
-    <a href="" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a>
+<!-- <a href="https://forms.gle/twRzP8NKpBpGdUVV9" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a> -->
     <br><br>
 
     <h3>Open Space?</h3>
@@ -128,11 +125,60 @@
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
-        <li>RAG-tekoälysovelluksen rakentaminen, työpaja (Maaret Pyhäjärvi) </li>
-        <li>Testauksen tulevaisuus on jo täällä, miten jaamme sen tasaisemmin (Maaret Pyhäjärvi)</li>
+        <li>Mistä tunnistaa tekoälytietäjän? (Maaret Pyhäjärvi)</li>
+        <li>Tiedon visualisoinnin merkitys tiedollajohtamisessa (HeidiL)</li>
+        <li>Tekoäly vuonna 2024 - Pelkoja ja odotuksia (Olli-Pekka Palonen)</li>
+        <li>NIS2 ja/tai Cyber-vakuutuksen vaatimukset (Juha Lilja)</li>
+        <li>Tietosuojan abc tietoalan henkilöstölle (Arvind Sedha)</li>
+        <li>Kaikkea tietoturvaan liittyviä aiheita (anon - ei julkaisulupaa nimelle)</li>
+        <li>Debuggauksen demokratisointi - miksi Observability muuttaa ohjelmistokehityksen maailmaa (Maaret Pyhäjärvi)</li>
+        <li>Ohjelmistotestaus on liian tärkeää jätettäväksi vain testaajille, mitä siitä pitäisi tietää? (Maaret Pyhäjärvi)</li>
+        <li>Kaksi vuotta copilot-käyttöä testaajan silmälasein, miksi ajattelu on yhä tärkeämpää? (Maaret Pyhäjärvi)</li>
+        <li>Mikrorahoituskokemuksia Selenium Open Source -yhteisöstä (Maaret Pyhäjärvi)</li>
+        <li>Avoimen lähdekoodin projekteihin kontribuointi (Maaret Pyhäjärvi)</li>
+        <li>Saavutettavuus ja sen testaus (anon - ei julkaisulupaa nimelle)</li> 
+        <li>Datan laatu testauksessa (anon - ei julkaisulupaa nimelle)</li>
+        <li>Tietoturvaa halvalla ja nopeasti (anon - ei julkaisulupaa nimelle)</li>
+        <li>Pärjäisikö ilman anonyymiä palautetta? (Maaret Pyhäjärvi)</li>
+        <li>Asiantuntijan opas asiantuntija-aseman nostamiseen (Maaret Pyhäjärvi)</li>
+        <li>Ensimmäinen seuraaja - osaamisen demokratisointi johtajien korostuksen sijaan (Maaret Pyhäjärvi)</li>
+        <li>Nykyaikainen tutkiva testaus (Maaret Pyhäjärvi)</li>
+        <li>Hallusinointitestaus - yhteistestaussessiona (Maaret Pyhäjärvi)</li>
+        <li>Mallipohjainen testaus - testitapausten kirjoittamisen ajan loppu (Maaret Pyhäjärvi)</li>
+        <li>Ulkoistaminen Suomen ulkopuolelle - yhteismallinnus haasteista (Maaret Pyhäjärvi)</li>
     </ul>
 
 </div>
+</section>
+
+<section class="about">
+    <div class="main">
+    <h3 id="toteutunut">Käsitellyt aiheet</h2>
+        <p>
+        Open Space -tapahtuman ohjelma muotoutuu viime kädessä osallistujien agendalla. Tänään osallistujat valitsivat 
+        oppia ja keskustella kuuden aiheen tiimoilla.</p>
+    <ul>
+        <li>Tekoälyn ajokortti<br>
+            <img width="60%" src="sessio1.png">
+        </li>
+        <li>Avoimen lähdekoodin yhteisöihin kontribuointi<br>
+            <img width="60%" src="sessio2.png">
+        </li>
+        <li>Python-ohjelmointi Copilotilla<br>
+            <img width="60%"src="sessio3.png">
+        </li>
+        <li>Saavutettavuus<br>
+            <img width="60%"src="sessio4.png">
+        </li>
+        <li>Mistä tunnistaa tekoälytietäjän?<br>
+            <img width="60%"src="sessio5.png">
+        </li>
+        <li>IT-kummitoiminta<br>
+            <img width="60%"src="sessio6.png">
+        </li>
+        </ul>
+    </div>
+
 </section>
 
 <section class="topics">
