Fix file extension to htm

--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
             <li><a href="#info">Tietoja tapahtumasta</a></li>
             <li><a href="#aiheet">Alustavat aiheet</a></li>
             <li><a href="#toteutunut"> Käsitellyt aiheet</a></li>
-            <li><a href="/24-kevat/index.html">24-kevät</a></li>
+            <li><a href="/24-kevat/index.htm">24-kevät</a></li>
         </ul>
     </div>
         <!--lisää ilmoittautumislinkki,kerätään tällä kertaa tivian alustalla-->
