Fixing styles and other

--- a/24-kevat/index.htm
+++ b/24-kevat/index.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Tivia Open Space 21.3.2024</title>
-        <link rel="stylesheet" type="text/css" href="./style.css">
+        <link rel="stylesheet" type="text/css" href="../style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
             <li><a href="#info">Tietoja tapahtumasta</a></li>
             <li><a href="#aiheet">Alustavat aiheet</a></li>
             <li><a href="#toteutunut"> Käsitellyt aiheet</a></li>
-            <li><a href="/24-kevat/index.htm">24-kevät</a></li>
+            <li><a href="./24-kevat/index.htm">24-kevät</a></li>
         </ul>
     </div>
     </nav>
