--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
         </ul>
     </div>
         <!--lisää ilmoittautumislinkki,kerätään tällä kertaa tivian alustalla-->
-        <a href="" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a>
+        <a href="https://tivia.fi/event/tivia-open-space-29-8-2024-2024-08-29-1058/register" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a>
     </nav>
 </div>
 
@@ -98,7 +98,7 @@
     <p>Verkossa, (Welo). 29.8.2024 klo 9-16.</p>
     <br>
     <!--lisää ilmoittautumislinkki,kerätään tällä kertaa tivian alustalla-->
-    <a href="" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a>
+    <a href="https://tivia.fi/event/tivia-open-space-29-8-2024-2024-08-29-1058/register" target="_blank" class="btn">Ilmoittaudu tapahtumaan</a>
     <br><br>
 
     <h3>Open Space?</h3>
@@ -128,6 +128,7 @@
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
+        <li>GitHub Pages -ensikokemus (Maaret Pyhäjärvi)</li>
         <li>RAG-tekoälysovelluksen rakentaminen, työpaja (Maaret Pyhäjärvi) </li>
         <li>Testauksen tulevaisuus on jo täällä, miten jaamme sen tasaisemmin (Maaret Pyhäjärvi)</li>
     </ul>
@@ -150,13 +151,5 @@
 </section>
 
 </body>
-
-
-<!--
-<button>Ilmoittaudu tapahtumaan</button>
-
-
-
--->
 
 </html>
