Add new topic to program

--- a/index.htm
+++ b/index.htm
@@ -128,6 +128,7 @@
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
+        <li>Julkkarikilpailutukset ohjelmistoprojektihankinnoille (Maaret Pyhäjärvi)</li>
         <li>GitHub Pages -ensikokemus (Maaret Pyhäjärvi)</li>
         <li>RAG-tekoälysovelluksen rakentaminen, työpaja (Maaret Pyhäjärvi) </li>
         <li>Testauksen tulevaisuus on jo täällä, miten jaamme sen tasaisemmin (Maaret Pyhäjärvi)</li>
