--- a/index.htm
+++ b/index.htm
@@ -124,10 +124,11 @@
     <p>Aiheet sitoumuksetta, agenda rakennetaan vasta ideatorilla ja omat toiveesi osallistua aiheeseen
         vaikuttavat agendan rakentamisvaiheessa.</p>
 
-    <p>Osallistujamäärä: <span>3</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
+    <p>Osallistujamäärä: <span>4</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
+        <li>Softatuotekehitysorganisaation sudenkuopat 2024 - luodaan yhdessä kokonaiskuvaa (Antti Kirjavainen)</li>
         <li>Julkkarikilpailutukset ohjelmistoprojektihankinnoille (Maaret Pyhäjärvi)</li>
         <li>GitHub Pages -ensikokemus (Maaret Pyhäjärvi)</li>
         <li>RAG-tekoälysovelluksen rakentaminen, työpaja (Maaret Pyhäjärvi) </li>
