Update list of topics

--- a/index.htm
+++ b/index.htm
@@ -129,6 +129,7 @@
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
         <li>Softatuotekehitysorganisaation sudenkuopat 2024 - luodaan yhdessä kokonaiskuvaa (Antti Kirjavainen)</li>
+        <li>Pitäisikö käyttäjän saada korvauksia ohjelmistovirheiden vaikutuksista? (Maaret Pyhäjärvi)</li>
         <li>Julkkarikilpailutukset ohjelmistoprojektihankinnoille (Maaret Pyhäjärvi)</li>
         <li>GitHub Pages -ensikokemus (Maaret Pyhäjärvi)</li>
         <li>RAG-tekoälysovelluksen rakentaminen, työpaja (Maaret Pyhäjärvi) </li>
