--- a/index.htm
+++ b/index.htm
@@ -124,10 +124,11 @@
     <p>Aiheet sitoumuksetta, agenda rakennetaan vasta ideatorilla ja omat toiveesi osallistua aiheeseen
         vaikuttavat agendan rakentamisvaiheessa.</p>
 
-    <p>Osallistujamäärä: <span>4</span> (päivitetään säännöllisesti mutta ei automaattisesti)</p>
+    <p>Osallistujamäärä: <span>6</span> (päivitetään säännöllisesti mutta ei automaattisesti, viimeksi 20.8.2024)</p>
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
+        <li>Tekoälyn käyttäminen testauksessa (Kirsi Kauppinen)</li>
         <li>Softatuotekehitysorganisaation sudenkuopat 2024 - luodaan yhdessä kokonaiskuvaa (Antti Kirjavainen)</li>
         <li>Pitäisikö käyttäjän saada korvauksia ohjelmistovirheiden vaikutuksista? (Maaret Pyhäjärvi)</li>
         <li>Julkkarikilpailutukset ohjelmistoprojektihankinnoille (Maaret Pyhäjärvi)</li>
