Updated event info and enrollments

--- a/index.htm
+++ b/index.htm
@@ -124,10 +124,14 @@
     <p>Aiheet sitoumuksetta, agenda rakennetaan vasta ideatorilla ja omat toiveesi osallistua aiheeseen
         vaikuttavat agendan rakentamisvaiheessa.</p>
 
-    <p>Osallistujamäärä: <span>6</span> (päivitetään säännöllisesti mutta ei automaattisesti, viimeksi 20.8.2024)</p>
+    <p>Osallistujamäärä: <span>8</span> (päivitetään säännöllisesti mutta ei automaattisesti, viimeksi 28.8.2024)</p>
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
+        <li>Tekijänoikeudet, lisenssit ja oikeudettoman käytön valvonta (Maaret Pyhäjärvi)</li>
+        <li>Harjoitellaan lausumista, lausuntopalvelu.fi (Maaret Pyhäjärvi)</li>
+        <li>Voisiko hyväksymistestauksen korvata auditoinneilla? (Maaret Pyhäjärvi)</li>
+        <li>Ikävä projekteja - miten saada aloituksen ja lopetuksen riemu jatkuvaan kehittämiseen (Maaret Pyhäjärvi)</li>
         <li>Tekoälyn käyttäminen testauksessa (Kirsi Kauppinen)</li>
         <li>Softatuotekehitysorganisaation sudenkuopat 2024 - luodaan yhdessä kokonaiskuvaa (Antti Kirjavainen)</li>
         <li>Pitäisikö käyttäjän saada korvauksia ohjelmistovirheiden vaikutuksista? (Maaret Pyhäjärvi)</li>
