Update after TOS2

--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
     <p>Aiheet sitoumuksetta, agenda rakennetaan vasta ideatorilla ja omat toiveesi osallistua aiheeseen
         vaikuttavat agendan rakentamisvaiheessa.</p>
 
-    <p>Osallistujamäärä: <span>8</span> (päivitetään säännöllisesti mutta ei automaattisesti, viimeksi 28.8.2024)</p>
+    <p>Osallistujamäärä: <span>10</span> (päivitetään säännöllisesti mutta ei automaattisesti, viimeksi 29.8.2024)</p>
 
     <h2 id="aiheet">Alustavat aiheet</h2>
     <ul>
@@ -142,6 +142,32 @@
     </ul>
 
 </div>
+</section>
+
+<section class="about">
+    <div class="main">
+    <h3 id="toteutunut">Käsitellyt aiheet</h2>
+        <p>
+        Open Space -tapahtuman ohjelma muotoutuu viime kädessä osallistujien agendalla. Tänään osallistujat valitsivat 
+        oppia ja keskustella kuuden aiheen tiimoilla.</p>
+    <ul>
+        <li>Rakennetaan RAG-tekoälysovellus testauskäyttöön-<br>
+            <img width="60%" src="sessio1.png">
+        </li>
+        <li>Tekoäly testauksessa mukaan opetukseen<br>
+            <img width="60%" src="sessio2.png">
+        </li>
+        <li>Ikävä projekteja - tavoitteellinen ja iloa sisältävä kehittäminen<br>
+            <img width="60%" src="sessio3.png">
+        </li>
+        <li>Testauksen tulevaisuus ja muutokset joiden keskellä olemme<br>
+            <img width="60%" src="sessio4.png">
+        </li>
+        <li>Miltä keskustelu näytti<br>
+            <img width="60%" src="Keskustelu.png"</li>
+        </ul>
+    </div>
+
 </section>
 
 <section class="topics">
